src/objects/CM_Document__c.object
<CustomObject>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>CCP Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmation of Infusion</fullName>
            </picklistValues>
			<picklistValues>
                <fullName>Co-Pay Attestation Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demographics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAP Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated Request Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax Cover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Attestation Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Attestation Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power of Attorney Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescription or Serialized Prescription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Authorization Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverification Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipment Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipment Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMN|Enrollment|Prescription Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starter Attestation Form</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pages__c</fullName>
        <label>Pages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient ID</label>
        <referenceTo>CM_Patient__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Access Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DOC-{0000000000}</displayFormat>
        <label>Document ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>